--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core libraries
-pandas==2.2.2
-numpy==1.26.4
+pandas
+numpy
 
 # Visualization (optional, for EDA)
-matplotlib==3.8.4
-seaborn==0.13.2
+matplotlib
+seaborn
 
 # ML + Pipeline
-scikit-learn==1.4.2
+scikit-learn
 
